Solve bug iusses